# auth-fastapi

./: .env  .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py  db.py  redis_client.py  security.py  token_store_redis.py
app/exceptions/: auth_exceptions.py  user_exceptions.py
app/models/: __init__.py  role.py  role_scope.py  scope.py  user.py  user_repo.py  user_role.py
app/routers/: auth.py  users.py
app/schemas/: auth.py  user.py
app/services/: auth_service.py  permission_service.py  user_service.py
app/utils/: dependencies.py
docs/: creacion del proyecto.md  dependencias.md  diseño_datos.md  diseño_fisico.md  endpoints.md  implementacion.md  implementacion_test_unitarios.md
docs/html/: errores.html  peticiones.html  respuestas.html
resources/: createTables.sql  createUser.sql  poblarTablasMaestras.sql
tests/: conftest.py  pytest.ini
tests/auth/: test_auth_router.py  test_auth_service.py
tests/user/: test_user_router.py  test_user_service.py
