[tool.poetry]
name = "auth-fastapi"
version = "0.1.0"
description = "Servicio de autenticación con FastAPI"
authors = ["Tú <tu.email@dominio.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.29"}
sqlmodel = ">=0.0.16"
sqlalchemy = ">=2.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.2"
passlib = { version = "^1.7", extras = ["bcrypt"] }
bcrypt = "4.0.1" 
aiomysql = "^0.2.0"
python-dotenv = "^1.0"

# Si piensas usar Alembic para migraciones:
alembic = "^1.13"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27"
pytest-asyncio = "^1.3.0"
anyio = "^4.12.1"
aiosqlite = "^0.22.1"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"